# UnityNeuroSpeech

./: .gitattributes  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSES.md  README.md  index.html  mkdocs.yml  sitemap.xml
PowerShell/: setup.ps1
batch/: RunPoweshell.bat  run_server.bat
docs/: index.md  quickstart.md
docs/other/: server.md
docs/unity/: agent-api.md  building-game.md  configure-settings.md  creating-agent.md  creating-uns-manager.md  steps-to-make-it-work.md  useful-tools.md
other/faq/: index.html
other/licenses/: index.html
other/server/: index.html
quickstart/: index.html
search/: search_index.json
server/: main.py  requirements.txt
setup/: setup.bat
src/Editor/: BaseAgentController.cs  CreateAgentTemplate.cs  CreateSettings.cs  EncryptionDecoding.cs  LoadLogLevel.cs  PromptTesting.cs  SceneManagerCreation.cs  UnityNeuroSpeech.Editor.asmdef
src/Native/: CMakeLists.txt  build.bat
src/Native/IL2CPP TTS Process/: IL2CPP_Process_Handling.cpp
src/Native/src/: IL2CPP_Process.cpp  IL2CPP_Process.hpp
src/Runtime/: AgentManager.cs  AgentSettings.cs  AgentUtils.cs  RuntimeJsonData.cs
src/Shared/: SharedJsonData.cs
src/UnityExtensions/: UnityExtensions.sln
src/Utils/: EncryptionUtils.cs  LogUtils.cs  ReflectionUtils.cs  SafeExecutionUtils.cs  UtilsVisible.cs
unity/Editor/: BaseAgentController.cs  CreateAgentTemplate.cs  CreateSettings.cs  LoadSettings.cs  SceneManagerCreation.cs
unity/Runtime/: AgentManager.cs  AgentSettings.cs  AgentUtils.cs  SetupWhisperPath.cs  UnityNeuroSpeech.Runtime.asmdef
(+56 files in other folders)
